--- a/src/Pages/People.css
+++ b/src/Pages/People.css
@@ -1,6 +1,7 @@
 .people_box{
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     border-radius:10px;
+    /* height:500px */
 }
 *::-webkit-scrollbar {
     display: none;
@@ -8,4 +9,10 @@
 .people_box:hover {
     transform: scale(1.08);
     transition: all 0.3s ease;
+}
+.favorite_btn{
+    position: absolute;
+    top:10%;
+    width:100%;
+overflow: auto;
 }
